Fix invisible header bug

--- a/favbooks/src/scss/header.scss
+++ b/favbooks/src/scss/header.scss
@@ -3,5 +3,4 @@ header {
   background-color: rgba(255, 255, 255, 0.85);
   text-align: center;
   border-bottom: 1rem solid orangered;
-  opacity: 80%;
 }
